Fixes to generator and client and added test file for setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ flask>=2.3.3
 flask-cors>=4.0.0
 
 # Database
-sqlite3  # Built into Python
+# sqlite3  # Built into Python
 
 # Development and testing
 pytest>=7.4.0
