--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,68 @@
-# Core dependencies
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-click>=8.1.7
-rich>=13.6.0
-python-dotenv>=1.0.0
-pydantic>=2.4.2
-PyYAML>=6.0.1
-
-# AI features (optional)
-openai>=1.3.0
-
-# Web interface
-flask>=2.3.3
-flask-cors>=4.0.0
-
-# Database
-# sqlite3  # Built into Python
-
-# Development and testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.0.0
-flake8>=6.0.0
-mypy>=1.5.0
-
-# Documentation
-mkdocs>=1.5.0
-mkdocs-material>=9.0.0
+annotated-types==0.7.0
+anyio==4.9.0
+babel==2.17.0
+backrefs==5.9
+beautifulsoup4==4.13.4
+black==25.1.0
+blinker==1.9.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+coverage==7.10.0
+distro==1.9.0
+flake8==7.3.0
+Flask==3.1.1
+flask-cors==6.0.1
+ghp-import==2.1.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.10.0
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.15
+mkdocs-material-extensions==1.3.1
+mypy==1.17.0
+mypy_extensions==1.1.0
+openai==1.97.1
+packaging==25.0
+paginate==0.5.7
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
+psutil==7.0.0
+pycodestyle==2.14.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyflakes==3.4.0
+Pygments==2.19.2
+pymdown-extensions==10.16
+pytest==8.4.1
+pytest-cov==6.2.1
+pytest-mock==3.14.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+pyyaml_env_tag==1.1
+requests==2.32.4
+rich==14.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+watchdog==6.0.0
+Werkzeug==3.1.3
